--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express-validator": "^6.4.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "mysql2": "^2.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
